WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
98974
[CSS Shaders] Validate types of built-in uniforms
https://bugs.webkit.org/show_bug.cgi?id=98974
Summary
[CSS Shaders] Validate types of built-in uniforms
Max Vujovic
Reported
2012-10-10 17:24:42 PDT
When an author defines a built-in uniform, WebKit should check its type. For example, the following should be an error because u_textureSize should be a vec2, not a float: attribute float u_textureSize; Built-in uniforms list:
https://dvcs.w3.org/hg/FXTF/raw-file/tip/filters/index.html#shader-uniform-variables
Attachments
Patch
(12.12 KB, patch)
2012-10-30 09:28 PDT
,
Max Vujovic
dino
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
Patch
(12.12 KB, patch)
2012-10-31 11:27 PDT
,
Max Vujovic
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Max Vujovic
Comment 1
2012-10-30 09:28:02 PDT
Created
attachment 171467
[details]
Patch
WebKit Review Bot
Comment 2
2012-10-31 02:48:59 PDT
Comment on
attachment 171467
[details]
Patch Rejecting
attachment 171467
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: 1 Died at Tools/Scripts/update-webkit line 154. Failed to run "['Tools/Scripts/update-webkit', '--chromium', '--force-update']" exit_code: 9 /video-* tests on Linux and Mac. When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 154. Full output:
http://queues.webkit.org/results/14561173
Max Vujovic
Comment 3
2012-10-31 11:27:33 PDT
Created
attachment 171694
[details]
Patch Rebased patch. Thanks for the review, Dean!
WebKit Review Bot
Comment 4
2012-10-31 15:14:18 PDT
Comment on
attachment 171694
[details]
Patch Clearing flags on attachment: 171694 Committed
r133083
: <
http://trac.webkit.org/changeset/133083
>
WebKit Review Bot
Comment 5
2012-10-31 15:14:21 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug