third_party/WebKit/LayoutTests/css3/filters/resources/invalid-type-u-mesh-box.fs
@@ -1,0 +1,12 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+// If this shader's related test passes, the custom filter does not execute because u_meshBox's type is invalid.
+
+precision mediump float;
+
+// u_meshBox should be a vec4, not a vec3.
+uniform vec3 u_meshBox;
+
+void main()
+{
+    css_MixColor = vec4(1.0, 0.0, 0.0, 1.0);
+}
