third_party/WebKit/LayoutTests/css3/filters/resources/invalid-type-u-mesh-size.fs
@@ -1,0 +1,12 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+// If this shader's related test passes, the custom filter does not execute because u_meshSize's type is invalid.
+
+precision mediump float;
+
+// u_meshSize should be a vec2, not a float.
+uniform float u_meshSize;
+
+void main()
+{
+    css_MixColor = vec4(1.0, 0.0, 0.0, 1.0);
+}
